usfm_parser/tests/snapshots/malformed__unlisted_book_code.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id ZZZ unlisted but well-formed\n\\c 1\n\\p \\v 1 x\n"
---
Book ZZZ "unlisted but well-formed" @0..32
ChapterStart 1@33..37
Para p@38..48
  VerseStart 1@41..45
  Text "x"@46..48
  VerseEnd 1
ChapterEnd 1
--- diagnostics
warning[unlisted-book-code] @4..7: `ZZZ` is not one of the book codes USFM lists; kept as written
